--- a/src/components/Awards.astro
+++ b/src/components/Awards.astro
@@ -4,7 +4,9 @@ const imgs = await Astro.glob("/public/awards/*.png")
 ---
 
 <section class="awards">
-  <SectionTitle>наши награды</SectionTitle>
+  <div class="container">
+    <SectionTitle>наши награды</SectionTitle>
+  </div>
   <div class="awards__title">
     <span class="awards__bold">70+ наград</span>
     <span class="awards__text">различных</span>
@@ -25,25 +27,49 @@ const imgs = await Astro.glob("/public/awards/*.png")
 
   .awards {
     margin-bottom: 2.3125rem;
+    @media (min-width: 1200px) {
+      padding-top: 24px;
+      max-width: 906px;
+      margin: 0 auto;
+      margin-bottom: 150px;
+    }
   }
-
+  
   .awards__title {
     margin-bottom: 2.375rem;
     padding-top: 2.375rem;
     padding-left: 11px;
     display: flex;
     flex-direction: column;
+    @media (min-width: 1200px) {
+      margin-top: 2rem;
+      padding-left: 60px;
+      margin-bottom: 115px;
+    }
   }
 
+  .container {
+    max-width: 802px;
+    margin: 0 auto;
+  }
+  
   .awards__bold {
     font-weight: 600;
     font-size: 2.25rem;
     line-height: 0.8;
+    @media (min-width: 1200px) {
+      font-size: 56px;
+      line-height: 0.95;
+    }
   }
   .awards__text {
     font-weight: 300;
     font-size: 2.25rem;
     line-height: 0.8;
+    @media (min-width: 1200px) {
+      font-size: 56px;
+      line-height: 0.95;
+    }
   }
 
   .awards__list {
@@ -52,10 +78,14 @@ const imgs = await Astro.glob("/public/awards/*.png")
     align-items: center;
     flex-wrap: wrap;
     gap: 1.8125rem 0;
+    @media (min-width: 1200px) {
+      flex-wrap: nowrap;
+    }
   }
 
   .awards__item {
     flex-basis: 50%;
+    
   }
 </style>
 
