--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -44,6 +44,9 @@
 <style lang="scss">
   .video {
     margin-bottom: 1.5rem;
+    @media (min-width: 1200px) {
+      margin-bottom: 5.5rem;
+    }
   }
 
   .video__video {
