--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -50,9 +50,10 @@ const items: Item[] = [
         <span>кампании</span>
         <span>с различным</span>
         <span> миксом каналов</span>
-        
       </div>
-      <Button />
+      <div class="projects__l">
+        <Button />
+      </div>
     </div>
     <ul class="projects__list">
       {
@@ -85,6 +86,12 @@ const items: Item[] = [
     justify-items: start;
     padding-left: 11px;
     margin-bottom: 5.25rem;
+    @media (min-width: 1200px) {
+      grid-template-columns: min-content auto;
+      gap: 50px;
+      align-items: start;
+      margin-top: 5rem;
+    }
   }
   .projects__text-content {
     margin-top: 1.5rem;
@@ -94,6 +101,10 @@ const items: Item[] = [
     font-size: 2.25rem;
     line-height: 0.8;
     font-weight: 300;
+    @media (min-width: 1200px) {
+      font-size: 3.75rem;
+      margin-top: 0;
+    }
   }
   .bold {
     font-weight: 500;
@@ -111,8 +122,12 @@ const items: Item[] = [
       "v b r"
       ;
       grid-template-columns: 276px 276px 383px;
-      grid-template-rows: 383px 469px;
+      grid-template-rows: 360px 469px;
     }
+  }
+
+  .projects__l {
+    margin-top: 10px;
   }
   
   .projects__item {
@@ -168,8 +183,11 @@ const items: Item[] = [
     padding: 2px;
     font-weight: 700;
   }
-
+  
   .projects__item_v {
+    @media (min-width: 1200px) {
+      padding-top: 24.5rem;
+    }
     padding-top: 18.0625rem;
     padding-right: 3.125rem;
     padding-bottom: 1.625rem;
@@ -246,6 +264,10 @@ const items: Item[] = [
     z-index: 5;
     background-position-y: -80px;
     margin-bottom: 2rem;
+    @media (min-width: 1200px) {
+      background-position-y: -32px;
+      
+    }
     .projects__item-title {
       max-width: 11rem;
     }
@@ -279,17 +301,31 @@ const items: Item[] = [
   .projects__item_d {
     padding-right: 3.125rem;
     padding-bottom: 10.5rem;
+    padding-top: 3rem;
     z-index: 5;
     margin-bottom: 2rem;
+    @media (min-width: 1200px) {
+      height: calc(100% - 2rem);
+      background: #2100E9 url("/projects/bg-mob.webp") no-repeat right bottom;
+      color: #FFFFFF;
+
+      .projects__item-desc {
+        max-width: 214px;
+      }
+    }
     .projects__item-title {
       max-width: 5.625rem;
+      @media (min-width: 1200px) {
+        font-size: 42px;
+        line-height: 0.9;
+        max-width: 11rem;
+      }
     }
     
     .projects__item-title-text::after {
       background-color: #654BFF;
       color: #FDD7B0;
-      top: unset;
-      bottom: 3px;
+      top: 14px;
       right: -2rem;
     }
   }
@@ -317,6 +353,10 @@ const items: Item[] = [
     padding-bottom: 10.5rem;
     z-index: 5;
     margin-bottom: 2rem;
+    @media (min-width: 1200px) {
+      padding-top: 41px;
+      max-height: calc(100% - 2rem);
+    }
     
     .projects__item-title-text::after {
       background-color: #3A8685;
