--- a/src/components/Us.astro
+++ b/src/components/Us.astro
@@ -5,19 +5,19 @@ type Item = {
   addText?: string;
   hasPlus?: boolean;
   desAd?: string;
-}
+};
 
 const items: Item[] = [
   {
     number: 15,
-    text: 'эффективные кампании на\u00A0российском рынке',
-    addText: 'запускаем',
+    text: "эффективные кампании на\u00A0российском рынке",
+    addText: "запускаем",
     hasPlus: true,
-    desAd: 'лет',
+    desAd: "лет",
   },
   {
     number: 70,
-    addText: 'талантов в\u00A0команде',
+    addText: "талантов в\u00A0команде",
     hasPlus: true,
   },
   {
@@ -27,22 +27,19 @@ const items: Item[] = [
       hi-res preprint <br/>
       digital департамент`,
   },
-]
+];
 ---
 
 <section class="us">
   <ul class="us__list">
     {
-      items.map(i => (
+      items.map((i) => (
         <li class="us__item">
           <div class="number__wrp">
             <span class="number">{i.number}</span>
             <div class="number__desc-wrp">
-              {i.hasPlus && (
-                <div class="plus">+</div>)}
-              {i.desAd && (
-                <div class="des_ad">{i.desAd}</div>
-              )}
+              {i.hasPlus && <div class="plus">+</div>}
+              {i.desAd && <div class="des_ad">{i.desAd}</div>}
               {i.addText && (
                 <div class="des_ad des_ad_thin">
                   <Fragment set:html={i.addText} />
@@ -50,13 +47,7 @@ const items: Item[] = [
               )}
             </div>
           </div>
-          {
-            i.text && (
-              <div class="text">
-                {i.text}
-              </div>
-            )
-          }
+          {i.text && <div class="text">{i.text}</div>}
         </li>
       ))
     }
@@ -64,20 +55,21 @@ const items: Item[] = [
 </section>
 
 <style lang="scss">
-
   .us {
     margin-bottom: 2.6875rem;
+    @media (min-width: 1200px) {
+      margin-bottom: 6rem;
+    }
   }
 
   .us__list {
     @media (min-width: 1200px) {
-      max-width: min-content;
+      max-width: 60.75rem;
       margin: 0 auto;
       display: grid;
-      grid-template-areas: 
+      grid-template-areas:
         "f s"
-        "f t"
-      ;
+        "f t";
       grid-template-columns: min-content min-content;
     }
   }
@@ -85,6 +77,10 @@ const items: Item[] = [
   .us__item {
     --number-size: 6.1875rem;
     --plus-size: 2.5625rem;
+    @media (min-width: 1200px) {
+      --number-size: 11.375rem;
+      --plus-size: 6rem;
+    }
   }
   .number__wrp {
     display: flex;
@@ -103,26 +99,89 @@ const items: Item[] = [
     font-size: 13px;
     font-weight: 400;
   }
-  
+
+  .us__item:first-child {
+    grid-area: f;
+    margin-bottom: 1.4375rem;
+    .number {
+      font-size: var(--number-size);
+    }
+
+    .plus {
+      font-size: var(--plus-size);
+      margin-bottom: 14px;
+    }
+
+    .des {
+      font-size: 2.25rem;
+      @media (min-width: 1200px) {
+        font-size: 3.75rem;
+        font-weight: 300;
+      }
+    }
+    .des_ad {
+      font-size: 2.25rem;
+      @media (min-width: 1200px) {
+        font-size: 3.75rem;
+        font-weight: 300;
+      }
+    }
+    .des_ad_thin {
+      font-weight: 300;
+    }
+    .text {
+      font-weight: 300;
+      font-size: 2.25rem;
+      line-height: 0.89;
+      max-width: 18.75rem;
+      margin-left: 3.5rem;
+      @media (min-width: 1200px) {
+        font-size: 3.75rem;
+        font-weight: 300;
+        margin-left: 6rem;
+      }
+    }
+  }
+
   .us__item:not(:first-child) {
+    @media (min-width: 1200px) {
+      --number-size: 8.125rem;
+      --plus-size: 3.375rem;
+      padding-left: 5.85rem;
+      padding-top: 34px;
+    }
+
     .number__wrp {
       display: grid;
-      grid-template-areas: 
+      grid-template-areas:
         "number des"
         "number des";
-        grid-template-columns: min-content 129px;
-        grid-template-rows: var(--number-size) 1fr;
-        gap: 0 12px;
+      grid-template-columns: min-content 129px;
+      grid-template-rows: var(--number-size) 1fr;
+      gap: 0 12px;
+      @media (min-width: 1200px) {
+        gap: 0 0;
+        
+      }
     }
     .plus {
       font-size: 2.5625rem;
+      @media (min-width: 1200px) {
+        font-size: var(--plus-size);
+      }
     }
     .number__wrp {
       padding-left: 3.85rem;
+      @media (min-width: 1200px) {
+        padding-left: 0;
+      }
     }
     .des_ad {
       max-width: 129px;
       line-height: 1.61;
+      @media (min-width: 1200px) {
+      font-size: 1.125rem;
+      }
     }
     .number {
       grid-area: number;
@@ -134,27 +193,9 @@ const items: Item[] = [
     }
     .des_ad {
       margin-top: calc(var(--number-size) - 1.61rem - var(--plus-size));
-    }
-  }
-
-  .us__item:first-child {
-    grid-area: f;
-    margin-bottom: 1.4375rem;
-    .des {
-      font-size: 2.25rem;
-    }
-    .des_ad {
-      font-size: 2.25rem;
-    }
-    .des_ad_thin {
-      font-weight: 300;
-    }
-    .text {
-      font-weight: 300;
-      font-size: 2.25rem;
-      line-height: 0.89;
-      max-width: 18.75rem;
-      margin-left: 3.5rem;
+      @media (min-width: 1200px) {
+        margin-top: calc(var(--number-size) - var(--plus-size) - 36px);
+      }
     }
   }
 
@@ -163,6 +204,19 @@ const items: Item[] = [
     margin-top: 0.35rem;
     --number-size: 4.8rem;
     --plus-size: 0px;
+    @media (min-width: 1200px) {
+      --number-size: 7rem;
+      
+      .number {
+        line-height: 1.7;
+      }
+      .number__wrp {
+        gap: 0 23px;
+      }
+      .number__desc-wrp {
+        transform: translateY(46px);
+      }
+    }
     .number__wrp {
       padding-left: 4.5rem;
     }
