--- a/src/components/shared/SectionTitle.astro
+++ b/src/components/shared/SectionTitle.astro
@@ -5,5 +5,9 @@
     padding-left: 11px;
     font-size: 1rem;
     font-weight: 500;
+
+    @media (min-width: 1200px) {
+    font-size: 1.125rem;
+    }
   }
 </style>
