--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -8,19 +8,19 @@ type Item = {
 const items: Item[] = [
   {
     name: "мы",
-    href: "/",
+    href: "#us",
   },
   {
     name: "проекты",
-    href: "/",
+    href: "#projects",
   },
   {
     name: "награды",
-    href: "/",
+    href: "#awards",
   },
   {
     name: "контакты",
-    href: "/",
+    href: "#footer",
   },
 ];
 ---
