--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -41,7 +41,7 @@ const items: Item[] = [
 
 ---
 
-<section class="projects">
+<section class="projects" id="projects">
   <Container>
     <SectionTitle>что мы делаем</SectionTitle>
     <div class="projects__cta">
