--- a/public/global.css
+++ b/public/global.css
@@ -37,6 +37,10 @@
   box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-size: 1rem;
     font-family: "Noto Sans", sans-serif;
