--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" id="footer">
   <div class="footer__container">
     <div class="item item_ltd">
       ооо "джи джи" креативное агентство
