--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import NavBar from "../components/NavBar.astro";
 import Projects from "../components/Projects.astro";
 import Us from "../components/Us.astro";
 import Video from "../components/Video.astro";
+import MobNav from "../components/shared/MobNav.astro";
 
 ---
 
@@ -21,7 +22,7 @@ import Video from "../components/Video.astro";
 	</head>
 	<body>
 		<main>
-			<!-- <NavBar /> -->
+			<MobNav />
 			<HeroSection />
 			<Us />
 			<Clients />
