--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -8,7 +8,7 @@ import NavBar from "./NavBar.astro";
     <h1 class="hero__title">
       <span class="hero__svg">gg</span>
       <span class="hero__text">креативное</span>
-      <span class="hero__text">агенство</span>
+      <span class="hero__text">агентство</span>
     </h1>
   
     <div class="hero__description">
