--- a/src/components/shared/Slider.astro
+++ b/src/components/shared/Slider.astro
@@ -1,5 +1,17 @@
 ---
-const logos = await Astro.glob('/public/logos/*.svg');
+
+import l1 from "/logos/1.svg";
+import l2 from "/logos/2.svg";
+import l3 from "/logos/3.svg";
+import l4 from "/logos/4.svg";
+import l5 from "/logos/5.svg";
+import l6 from "/logos/6.svg";
+import l7 from "/logos/7.svg";
+import l8 from "/logos/8.svg";
+import l9 from "/logos/9.svg";
+// const logos = await Astro.glob('/public/logos/*.svg');
+
+const logos = [l1, l2, l3, l4, l5, l6, l7, l8, l9];
 
 const mobLogos = [...logos].splice(logos.length / 2).concat([...logos].splice(0, logos.length / 2));
 
@@ -11,7 +23,7 @@ const mobLogos = [...logos].splice(logos.length / 2).concat([...logos].splice(0,
       logos.map(logo => {
         return (
           <li class="slider__item">
-            <img src={logo.default} alt={logo.name} />
+            <img src={logo} alt="Логотип" />
           </li>
         )
       })
@@ -22,7 +34,7 @@ const mobLogos = [...logos].splice(logos.length / 2).concat([...logos].splice(0,
       logos.map(logo => {
         return (
           <li class="slider__item">
-            <img src={logo.default} alt={logo.name} />
+            <img src={logo} alt="Логотип" />
           </li>
         )
       })
@@ -35,7 +47,7 @@ const mobLogos = [...logos].splice(logos.length / 2).concat([...logos].splice(0,
       mobLogos.map(logo => {
         return (
           <li class="slider__item">
-            <img src={logo.default} alt={logo.name} />
+            <img src={logo} alt="Логотип" />
           </li>
         )
       })
@@ -46,7 +58,7 @@ const mobLogos = [...logos].splice(logos.length / 2).concat([...logos].splice(0,
       mobLogos.map(logo => {
         return (
           <li class="slider__item">
-            <img src={logo.default} alt={logo.name} />
+            <img src={logo} alt="Логотип" />
           </li>
         )
       })
@@ -84,10 +96,10 @@ const mobLogos = [...logos].splice(logos.length / 2).concat([...logos].splice(0,
 
   @keyframes move {
     0% {
-      transform: translateX(-10%);
+      transform: translateX(0);
     }
     100% {
-      transform: translateX(-110%);
+      transform: translateX(-100%);
     }
   }
 
