--- a/src/components/shared/Slider.astro
+++ b/src/components/shared/Slider.astro
@@ -68,6 +68,10 @@ const mobLogos = [...logos].splice(logos.length / 2).concat([...logos].splice(0,
 
 <style lang="scss">
 
+  img {
+    display: block;
+  }
+
   .slider.slider_mob {
     @media (min-width: 1200px) {
       display: none;
