--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -12,7 +12,7 @@ import NavBar from "./NavBar.astro";
     </h1>
   
     <div class="hero__description">
-      <div class="hero__desc-text">ex VMLY&R</div>
+      <div class="hero__desc-text">ex VMLY&R Group</div>
       <div class="hero__desc-text">ex Geometry</div>
     </div>
   </div>
@@ -48,10 +48,11 @@ import NavBar from "./NavBar.astro";
   .hero {
     padding-top: 2rem;
     padding-bottom: 34px;
-    background: #EBD0BF url("/bg.webp") no-repeat center bottom /cover;
+    background: #E2CABB url("/bg.webp") no-repeat center bottom /cover;
     @media (min-width: 1200px) {
       padding-top: 3rem;
       margin-bottom: 4rem;
+      background-size: 1200px 100%;
       
     }
   }
