--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,10 +6,10 @@
     <div class="item item_cont">
       москва <br />
       +7 495 663 7650 
-      Олимпийский проспект 16/5
+      олимпийский проспект 16/5
     </div>
     <a href="mailto:welcome@aggency.ru" class="link">почта: welcome@aggency.ru</a>
-    <div class="date">{new Date().getFullYear()}</div>
+    <div class="date">© {new Date().getFullYear()}  ООО «ДЖИ ДЖИ». Все права защищены. 18+</div>
   </div>
 </footer>
 
