--- a/src/components/shared/Slider.astro
+++ b/src/components/shared/Slider.astro
@@ -8,7 +8,7 @@ import l7 from "/logos/7.svg";
 import l9 from "/logos/9.svg";
 // const logos = await Astro.glob('/public/logos/*.svg');
 
-const logos = [l3, l4, l5, l6, l7, l9];
+const logos = [l3, l4, l5, l6, l7, l9, l3, l4, l5, l6, l7, l9];
 
 const mobLogos = [...logos].splice(logos.length / 2).concat([...logos].splice(0, logos.length / 2));
 
