fix: projects, video

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -32,7 +32,7 @@ const items: Item[] = [
   },
   {
     title: "Retail",
-    subtitle: "(in-store & e-comm)",
+    subtitle: "(in-store & e-com)",
     desc: "Активации в канале, ритейл-дизайн, кастомизированные кампании с торговыми сетями, 15+ лет опыта работы в шопер марекетинге в России",
     background: "url(/projects/r.jpg)",
     mod: "r"
@@ -163,27 +163,7 @@ const items: Item[] = [
   }
   .projects__item-title-text {
     position: relative;
-  }
-
-  .projects__item-title-text::after {
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    content: attr(data-letter);
-    width: 1.1875rem;
-    height: 1.1875rem;
-    border-radius: 0.3rem;
-    font-size: 1rem;
-    line-height: 13px;
-    background-color: rebeccapurple;
-    text-align: center;
-    padding: 2px;
-    font-weight: 700;
-  }
-  
+  } 
   .projects__item_v {
     @media (min-width: 1200px) {
       padding-top: 24.5rem;
@@ -263,7 +243,7 @@ const items: Item[] = [
     padding-bottom: 19.43rem;
     min-height: calc(490px - 1rem);
     z-index: 5;
-    background: var(--bg) no-repeat center bottom/ 70%, linear-gradient(180deg, #D8AE6B 0%, #EBE9E5 65.1%, #C6C6C6 90.63%, #FFFFFF 100%);
+    background: var(--bg) no-repeat center bottom/ contain, linear-gradient(180deg, #1BB3D4 27.08%, #06ACD0 86.46%);
     // background-position-y: -80px;
     margin-bottom: 2rem;
     @media (min-width: 1200px) {
@@ -313,7 +293,7 @@ const items: Item[] = [
     padding-top: 3rem;
     z-index: 5;
     margin-bottom: 2rem;
-    background: #2100E9 url("/projects/d.png") no-repeat right bottom /152px auto;
+    background: #2100E9 url("/projects/d.webp") no-repeat right bottom /152px auto;
     color: #FFFFFF;
     .projects__item-desc {
       max-width: 149px;
