--- a/src/components/Us.astro
+++ b/src/components/Us.astro
@@ -22,10 +22,10 @@ const items: Item[] = [
   },
   {
     number: 3,
-    addText: `Собственные студии: <br/>
+    addText: `собственные студии: <br/>
       3D-дизайн <br/> 
       hi-res preprint <br/>
-      digital департамент`,
+      digital-департамент`,
   },
 ];
 ---
