--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -25,7 +25,7 @@ const items: Item[] = [
     mod: "b"
   },
   {
-    title: "Digital design",
+    title: "Digital- design",
     desc: "Разработка эко-системы коммуникаций в канале, платформ и программ, UX/UI, поддержка e-com",
     background: "url(/projects/d_m.jpg)",
     mod: "d"
