--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -26,7 +26,7 @@ const items: Item[] = [
   },
   {
     title: "Digital- design",
-    desc: "Разработка эко-системы коммуникаций в канале, платформ и программ, UX/UI, поддержка e-com",
+    desc: "Разработка экосистемы коммуникаций в канале, платформ и программ, UX/UI, поддержка e-com",
     background: "url(/projects/d_m.jpg)",
     mod: "d"
   },
@@ -254,7 +254,7 @@ const items: Item[] = [
 
   .projects__item_b {
     padding-right: 3.125rem;
-    padding-bottom: 19.43rem;
+    padding-bottom: 20.43rem;
     min-height: calc(490px - 1rem);
     z-index: 5;
     background: var(--bg) no-repeat center bottom/ contain, linear-gradient(180deg, #1BB3D4 27.08%, #06ACD0 86.46%);
@@ -302,17 +302,18 @@ const items: Item[] = [
   }
   
   .projects__item_d {
-    padding-right: 3.125rem;
+    padding-right: 11.125rem;
     padding-bottom: 10.5rem;
     padding-top: 3rem;
     z-index: 5;
     margin-bottom: 2rem;
-    background: #2100E9 url("/projects/d.webp") no-repeat right bottom /152px auto;
+    background: #2100E9 url("/projects/d.webp") no-repeat right bottom /200px auto;
     color: #FFFFFF;
     .projects__item-desc {
       max-width: 149px;
     }
     @media (min-width: 1200px) {
+      padding-right: 3.125rem;
       height: calc(100% - 2rem);
       .projects__item-desc {
         max-width: 100%;
