--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -25,7 +25,7 @@ const items: Item[] = [
     mod: "b"
   },
   {
-    title: "Digital- design",
+    title: "Digital design",
     desc: "Разработка экосистемы коммуникаций в канале, платформ и программ, UX/UI, поддержка e-com",
     background: "url(/projects/d_m.jpg)",
     mod: "d"
@@ -164,7 +164,7 @@ const items: Item[] = [
     display: flex;
     flex-direction: column;
     margin-bottom: 1.125rem;
-    font-weight: 500;
+    font-weight: 700;
     font-size: 1.375rem;
     line-height: 1.27;
     text-transform: uppercase;
